--- a/CSS/main.css
+++ b/CSS/main.css
@@ -10,7 +10,7 @@
 
 @font-face {
     font-family: 'UniversLTU49C';
-    src: url("./Assets/UniversLTU49C/Univers\ LT\ 49\ Light\ Ultra\ Condensed.ttf");
+    src: url("../Assets/UniversLTU49C/Univers\ LT\ 49\ Light\ Ultra\ Condensed.ttf");
 }
 
 body {
